just Model n0 train data

--- a/Html/All_Apps.html
+++ b/Html/All_Apps.html
@@ -183,9 +183,9 @@
 									<img src="/static/images/logos/learning.png" alt="image">
                                     <h2 data-animation="animated zoomInRight">AI Could Make a World <strong>Better Place</strong></h2>
 									<p class="lead" data-animation="animated fadeInLeft">A year spent in artificial intelligence is enough to make one believe in God.</p>
-									 <a data-scroll href="#pricing" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInLeft">Enroll Today</a>
+                                    <a data-scroll href="AllApps" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInLeft" >See All Apps</a>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									<a data-scroll href="#overviews" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInRight">See All Courses</a>
+									<a data-scroll href="#overviews" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInRight" style="display: none;">See All Apps</a>
 								</div>
 							</div>
 						</div><!-- end row -->            
@@ -201,9 +201,9 @@
 									<img src="/static/images/logos/learning.png" alt="image">
 									<h2 data-animation="animated zoomInRight">The Goal of AI is to Give Better <strong>Customer Service</strong></h2>
 									<p class="lead" data-animation="animated fadeInLeft">The key to artificial intelligence has always been the Representation.</p>
-									 <a data-scroll href="#pricing" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInLeft">Enroll Today</a>
+                                    <a data-scroll href="AllApps" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInLeft" >See All Apps</a>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									<a data-scroll href="#overviews" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInRight">See All Courses</a>
+									<a data-scroll href="#overviews" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInRight" style="display: none;">See All Apps</a>
 								</div>
 							</div>
 						</div><!-- end row -->            
@@ -221,7 +221,7 @@
 				<span class="fa fa-angle-right" aria-hidden="true"></span>
 				<span class="sr-only">Next</span>
 			</a>
-			</a>
+			
 		</div>
 	</div>
 	
